--- a/ModelLib/ModelLib.csproj
+++ b/ModelLib/ModelLib.csproj
@@ -74,14 +74,18 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="searchWeight.cs" />
     <Compile Include="tag.cs" />
-    <Compile Include="Tools\JsonTool.cs" />
     <Compile Include="Tools\MyTools.cs" />
-    <Compile Include="Tools\WeatherTools.cs" />
     <Compile Include="user.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ToolsLib\ToolsLib.csproj">
+      <Project>{e23c7f71-f493-4ff3-8b4f-920e46c36f69}</Project>
+      <Name>ToolsLib</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
