--- a/SeviceLib/SeviceLib.csproj
+++ b/SeviceLib/SeviceLib.csproj
@@ -81,6 +81,10 @@
       <Project>{938d5bcd-5b9a-4d26-9593-be387cad9dfa}</Project>
       <Name>ModelLib</Name>
     </ProjectReference>
+    <ProjectReference Include="..\ToolsLib\ToolsLib.csproj">
+      <Project>{e23c7f71-f493-4ff3-8b4f-920e46c36f69}</Project>
+      <Name>ToolsLib</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
