--- a/PersonalSchedule/PersonalSchedule.csproj
+++ b/PersonalSchedule/PersonalSchedule.csproj
@@ -49,6 +49,10 @@
       <HintPath>..\packages\HtmlAgilityPack.1.4.9.5\lib\Net45\HtmlAgilityPack.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="LIWeiYINYifanLib, Version=1.0.0.0, Culture=neutral, PublicKeyToken=0f6c2e8edfba25a6, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>C:\Windows\Microsoft.NET\assembly\GAC_MSIL\LIWeiYINYifanLib\v4.0_1.0.0.0__0f6c2e8edfba25a6\LIWeiYINYifanLib.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.AI.Agent.Intercept, Version=2.0.6.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.ApplicationInsights.Agent.Intercept.2.0.6\lib\net45\Microsoft.AI.Agent.Intercept.dll</HintPath>
       <Private>True</Private>
