日历显示事件顺序错误

--- a/EncryptLib/EncryptLib.vcxproj
+++ b/EncryptLib/EncryptLib.vcxproj
@@ -74,10 +74,10 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <LinkIncremental>true</LinkIncremental>
+    <LinkIncremental>false</LinkIncremental>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <LinkIncremental>true</LinkIncremental>
+    <LinkIncremental>false</LinkIncremental>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
@@ -94,7 +94,12 @@
     </ClCompile>
     <Link>
       <AdditionalDependencies />
+      <TargetMachine>NotSet</TargetMachine>
+      <CLRImageType>ForceIJWImage</CLRImageType>
     </Link>
+    <ProjectReference>
+      <LinkLibraryDependencies>false</LinkLibraryDependencies>
+    </ProjectReference>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
@@ -105,7 +110,12 @@
     </ClCompile>
     <Link>
       <AdditionalDependencies />
+      <TargetMachine>NotSet</TargetMachine>
+      <CLRImageType>ForceIJWImage</CLRImageType>
     </Link>
+    <ProjectReference>
+      <LinkLibraryDependencies>false</LinkLibraryDependencies>
+    </ProjectReference>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
@@ -115,7 +125,12 @@
     </ClCompile>
     <Link>
       <AdditionalDependencies />
+      <TargetMachine>NotSet</TargetMachine>
+      <CLRImageType>ForceIJWImage</CLRImageType>
     </Link>
+    <ProjectReference>
+      <LinkLibraryDependencies>false</LinkLibraryDependencies>
+    </ProjectReference>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
@@ -125,7 +140,12 @@
     </ClCompile>
     <Link>
       <AdditionalDependencies />
+      <TargetMachine>NotSet</TargetMachine>
+      <CLRImageType>ForceIJWImage</CLRImageType>
     </Link>
+    <ProjectReference>
+      <LinkLibraryDependencies>false</LinkLibraryDependencies>
+    </ProjectReference>
   </ItemDefinitionGroup>
   <ItemGroup>
     <Reference Include="System" />
